--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
       <body>
             <table border="1">
+                <h1>25 Highest Grossing Movies of All Time</h1>
+                
                   <tr> 
                       <th>Year</th>
                       <th>Title Of The Movie</th>
